# vector

./: Cargo.toml  LICENSE-3rdparty.csv
lib/codecs/: Cargo.toml
lib/docs-renderer/: Cargo.toml
lib/prometheus-parser/: Cargo.toml
lib/vector-buffers/: Cargo.toml
lib/vector-buffers/src/: internal_events.rs
lib/vector-common/: Cargo.toml
lib/vector-common/src/internal_event/: bytes_received.rs  bytes_sent.rs  component_events_dropped.rs  events_received.rs  events_sent.rs  mod.rs
lib/vector-config/: Cargo.toml
lib/vector-core/: Cargo.toml
src/: http.rs  lib.rs
src-lib/: Cargo.toml
src-lib/src/: lib.rs
src-lib/src/config/: mod.rs
src/conditions-lib/: Cargo.toml
src/conditions-lib/src/: datadog_search.rs  is_log.rs  is_metric.rs  is_trace.rs  lib.rs  vrl.rs
src/config-lib/: Cargo.toml
src/config-lib/src/: lib.rs  schema.rs  transforms.rs
src/http-util/: Cargo.toml  Cargo.toml.back
src/http-util/src/: lib.rs
src/internal_events/: adaptive_concurrency.rs  filter.rs  mod.rs  pulsar.rs
src/serde-util/: Cargo.toml
src/sources/: mod.rs
src/sources/http_client/: Cargo.toml  Cargo.toml.back
src/sources/http_client/src/: client.rs  lib.rs
src/sources/http_server/: Cargo.toml
src/sources/http_server/src/: lib.rs
src/sources/util/: Cargo.toml
src/sources/util/src/: lib.rs
src/template-lib/: Cargo.toml
src/template-lib/src/: lib.rs
src/transforms/: mod.rs
src/transforms/aggregate/: Cargo.toml
src/transforms/aggregate/src/: aggregate.rs  lib.rs
src/transforms/aws_ec2_metadata/: Cargo.toml
src/transforms/aws_ec2_metadata/src/: aws_ec2_metadata.rs  lib.rs
src/transforms/dedupe/: Cargo.toml
src/transforms/dedupe/src/: dedupe.rs  internal_events.rs  lib.rs
src/transforms/filter/: Cargo.toml
src/transforms/filter/src/: filter.rs  internal_events.rs  lib.rs
src/transforms/remap/: Cargo.toml
src/transforms/remap/src/: internal_events.rs  lib.rs  remap.rs
src/transforms/route/: Cargo.toml
src/transforms/route/src/: lib.rs  route.rs
src/transforms/sample/: Cargo.toml
src/transforms/sample/src/: internal_events.rs  lib.rs  sample.rs
src/transforms/throttle/: Cargo.toml
src/transforms/throttle/src/: internal_events.rs  lib.rs  throttle.rs
