[package]
name = "src-lib"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
vector-lib = { path = "../lib/vector-lib", default-features = false, features = ["vrl"] }
vrl = { git = "https://github.com/vectordotdev/vrl", rev = "37319dfca17dc5d7637b24455199029cc30eb128", features = ["arbitrary", "cli", "test", "test_framework"] }

async-trait = { version = "0.1.74", default-features = false }
futures = { version = "0.3.29", default-features = false, features = ["compat", "io-compat"], package = "futures" }
tokio = { version = "1.34.0", default-features = false, features = ["full"] }
tokio-util = { version = "0.7", default-features = false, features = ["io", "time"] }

# Tracing
tracing = { version = "0.1.34", default-features = false }

# Metrics
metrics = "0.21.1"

# Tower
tower = { version = "0.4.13", default-features = false, features = ["buffer", "limit", "retry", "timeout", "util", "balance", "discover"] }
tower-http = { version = "0.4.4", default-features = false, features = ["decompression-gzip", "trace"]}
# Serde
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde-toml-merge = { version = "0.3.3", default-features = false }
serde_json = { version = "1.0.107", default-features = false, features = ["raw_value", "std"] }
serde_with = { version = "3.4.0", default-features = false, features = ["macros", "std"] }
serde_yaml = { version = "0.9.27", default-features = false }

# Datadog Pipelines

hex = { version = "0.4.3", default-features = false, optional = true }
sha2 = { version = "0.10.8", default-features = false, optional = true }
bytes = { version = "1.5.0", default-features = false, features = ["serde"] }
bytesize = { version = "1.3.0", default-features = false }
chrono = { version = "0.4.31", default-features = false, features = ["serde"] }
clap = { version = "4.4.10", default-features = false, features = ["derive", "error-context", "env", "help", "std", "string", "usage", "wrap_help"] }
derivative = { version = "2.2.0", default-features = false }
dyn-clone = { version = "1.0.16", default-features = false }
enum_dispatch = { version = "0.3.12", default-features = false }
exitcode = { version = "1.1.2", default-features = false }
futures-util = { version = "0.3.29", default-features = false }
glob = { version = "0.3.1", default-features = false }
headers = { version = "0.3.9", default-features = false }
http = { version = "0.2.9", default-features = false }
hyper = { version = "0.14.27", default-features = false, features = ["client", "runtime", "http1", "http2", "server", "stream"] }
hyper-openssl = { version = "0.9.2", default-features = false }
hyper-proxy = { version = "0.9.1", default-features = false, features = ["openssl-tls"] }
indexmap = { version = "2.1.0", default-features = false, features = ["serde", "std"] }
indoc = { version = "2.0.4", default-features = false }
notify = { version = "6.1.1", default-features = false, features = ["macos_fsevent"] }
once_cell = { version = "1.18", default-features = false }
openssl = { version = "0.10.60", default-features = false, features = ["vendored"] }
ordered-float = { version = "4.1.1", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
regex = { version = "1.10.2", default-features = false, features = ["std", "perf"] }
smallvec = { version = "1", default-features = false, features = ["union", "serde"] }
snafu = { version = "0.7.5", default-features = false }
toml = { version = "0.8.8", default-features = false, features = ["parse", "display"] }
typetag = { version = "0.2.13", default-features = false }
url = { version = "2.5.0", default-features = false, features = ["serde"] }
uuid = { version = "1", default-features = false, features = ["serde", "v4"] }

# depending on fork for bumped nix dependency
# https://github.com/heim-rs/heim/pull/360
heim = { git = "https://github.com/vectordotdev/heim.git", branch = "update-nix", default-features = false, features = ["disk"] }

