[package]
name = "http-util"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
# Internal libs
vector-lib = { path = "../../lib/vector-lib", default-features = false, features = ["vrl"] }
futures = { version = "0.3.29", default-features = false, features = ["compat", "io-compat"], package = "futures" }
tokio = { version = "1.34.0", default-features = false, features = ["full"] }

# Tracing
tracing = { version = "0.1.34", default-features = false }

# Metrics
metrics = "0.21.1"

# Tower
tower = { version = "0.4.13", default-features = false, features = ["buffer", "limit", "retry", "timeout", "util", "balance", "discover"] }
tower-http = { version = "0.4.4", default-features = false, features = ["decompression-gzip", "trace"]}
serde_with = { version = "3.4.0", default-features = false, features = ["macros", "std"] }
futures-util = { version = "0.3.29", default-features = false }
headers = { version = "0.3.9", default-features = false }
http = { version = "0.2.9", default-features = false }
hyper = { version = "0.14.27", default-features = false, features = ["client", "runtime", "http1", "http2", "server", "stream"] }
hyper-openssl = { version = "0.9.2", default-features = false }
hyper-proxy = { version = "0.9.1", default-features = false, features = ["openssl-tls"] }
openssl = { version = "0.10.60", default-features = false, features = ["vendored"] }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
snafu = { version = "0.7.5", default-features = false, features = ["futures"] }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }

