[package]
name = "serde-util"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
# Internal libs
vector-lib = { path = "../../lib/vector-lib", default-features = false, features = ["vrl"] }

serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.107", default-features = false, features = ["raw_value"] }
indexmap = { version = "2.1.0", default-features = false, features = ["serde", "std"] }
bytes = { version = "1.5.0", default-features = false, features = ["serde"] }
bytesize = { version = "1.3.0", default-features = false }
