[package]
name = "template-lib"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
vector-lib = { path = "../../lib/vector-lib", default-features = false, features = ["vrl"] }
bytes = { version = "1.5.0", default-features = false, features = ["serde"] }
chrono = { version = "0.4.31", default-features = false, features = ["serde"] }
chrono-tz = { version = "0.8.3", default-features = false }
once_cell = { version = "1.18", default-features = false }
regex = { version = "1.10.2", default-features = false, features = ["std", "perf"] }
snafu = { version = "0.7.5", default-features = false, features = ["futures"] }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }


