[package]
name = "sources-http-client"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
# Internal libs
vector-lib = { path = "../../../lib/vector-lib", default-features = false, features = ["vrl"] }
sources-utils = { path = "../util" }
src-lib = { path = "../../../src-lib" }

async-trait = { version = "0.1.74", default-features = false }
tokio = { version = "1.34.0", default-features = false, features = ["full"] }
tokio-util = { version = "0.7", default-features = false, features = ["io", "time"] }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde_with = { version = "3.4.0", default-features = false, features = ["macros", "std"] }
bytes = { version = "1.5.0", default-features = false, features = ["serde"] }
chrono = { version = "0.4.31", default-features = false, features = ["serde"] }
futures-util = { version = "0.3.29", default-features = false }
http = { version = "0.2.9", default-features = false }
snafu = { version = "0.7.5", default-features = false }
typetag = { version = "0.2.13", default-features = false }
url = { version = "2.5.0", default-features = false, features = ["serde"] }
warp = { version = "0.3.6", default-features = false }

[features]
#sources-http_client = []
http-client-integration-tests = []
