[package]
name = "sources-http-server"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
# Internal libs
vector-lib = { path = "../../../lib/vector-lib", default-features = false, features = ["vrl"] }
sources-utils = { path = "../util" }

vrl = { git = "https://github.com/vectordotdev/vrl", rev = "37319dfca17dc5d7637b24455199029cc30eb128", features = ["arbitrary", "cli", "test", "test_framework"] }

async-trait = { version = "0.1.74", default-features = false }
futures = { version = "0.3.29", default-features = false, features = ["compat", "io-compat"], package = "futures" }
tokio = { version = "1.34.0", default-features = false, features = ["full"] }
tokio-util = { version = "0.7", default-features = false, features = ["io", "time"] }
# Serde
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
bytes = { version = "1.5.0", default-features = false, features = ["serde"] }
chrono = { version = "0.4.31", default-features = false, features = ["serde"] }
flate2 = { version = "1.0.28", default-features = false, features = ["default"] }
http = { version = "0.2.9", default-features = false }
http-serde = "1.1.3"
toml = { version = "0.8.8", default-features = false, features = ["parse", "display"] }
typetag = { version = "0.2.13", default-features = false }
warp = { version = "0.3.6", default-features = false }

[features]
sources-http_server = []
