[package]
name = "transforms-aggregate"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
# Internal libs
vector-lib = { path = "../../../lib/vector-lib", default-features = false, features = ["vrl"] }
vector-vrl-functions = { path = "../../../lib/vector-vrl/functions" }
config-lib = { path = "../../config-lib" }
serde-util = { path = "../../serde-util" }

vrl = { git = "https://github.com/vectordotdev/vrl", rev = "37319dfca17dc5d7637b24455199029cc30eb128", features = ["arbitrary", "cli", "test", "test_framework"] }

async-stream = { version = "0.3.5", default-features = false }
async-trait = { version = "0.1.74", default-features = false }
derivative = { version = "2.2.0", default-features = false }
futures = { version = "0.3.29", default-features = false, features = ["compat", "io-compat"], package = "futures" }
inventory = { version = "0.3.13", default-features = false }
metrics = "0.21.1"
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.107", default-features = false, features = ["raw_value"] }
snafu = { version = "0.7.5", default-features = false }
typetag = { version = "0.2.13", default-features = false }
tracing = { version = "0.1.34", default-features = false }
toml = { version = "0.8.8", default-features = false, features = ["parse", "display"] }
tokio = { version = "1.34.0", default-features = false, features = ["full"] }
