[package]
name = "transforms-dedupe"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
# Internal libs
vector-lib = { path = "../../../lib/vector-lib", default-features = false, features = ["vrl"] }
config-lib = { path = "../../config-lib" }

vrl = { git = "https://github.com/vectordotdev/vrl", rev = "37319dfca17dc5d7637b24455199029cc30eb128", features = ["arbitrary", "cli", "test", "test_framework"] }
async-trait = { version = "0.1.74", default-features = false }
futures = { version = "0.3.29", default-features = false, features = ["compat", "io-compat"], package = "futures" }
typetag = { version = "0.2.13", default-features = false }
tokio = { version = "1.34.0", default-features = false, features = ["full"] }
lru = { version = "0.12.1", default-features = false }
bytes = { version = "1.5.0", default-features = false, features = ["serde"] }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
toml = { version = "0.8.8", default-features = false, features = ["parse", "display"] }
inventory = { version = "0.3.13", default-features = false }
