[package]
name = "transforms-filter"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
# Internal libs
vector-lib = { path = "../../../lib/vector-lib", default-features = false, features = ["vrl"] }
config-lib = { path = "../../config-lib" }
conditions-lib = { path = "../../conditions-lib" }

async-trait = { version = "0.1.74", default-features = false }
typetag = { version = "0.2.13", default-features = false }
tokio = { version = "1.34.0", default-features = false, features = ["full"] }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
toml = { version = "0.8.8", default-features = false, features = ["parse", "display"] }
inventory = { version = "0.3.13", default-features = false }
paste = "1.0.14"
