[package]
name = "transforms-throttle"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
# Internal libs
vector-lib = { path = "../../../lib/vector-lib", default-features = false, features = ["vrl"] }
config-lib = { path = "../../config-lib" }
conditions-lib = { path = "../../conditions-lib" }
template-lib = { path = "../../template-lib" }

async-trait = { version = "0.1.74", default-features = false }
async-stream = { version = "0.3.5", default-features = false }
inventory = { version = "0.3.13", default-features = false }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde_with = { version = "3.4.0", default-features = false, features = ["macros", "std"] }
typetag = { version = "0.2.13", default-features = false }
toml = { version = "0.8.8", default-features = false, features = ["parse", "display"] }
tokio = { version = "1.34.0", default-features = false, features = ["full"] }
snafu = { version = "0.7.5", default-features = false }
futures = { version = "0.3.29", default-features = false, features = ["compat", "io-compat"], package = "futures" }
governor = { version = "0.6.0", default-features = false, features = ["dashmap", "jitter", "std"] }
metrics = "0.21.1"
tracing = { version = "0.1.34", default-features = false }
